[project]
name = "labwons"
version = "0.0.1"
description = "LABWONS MARKET TOOLS"
authors = [{ name = "Noesis", email = "snob.labwons@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]